Move actionbar items to functions
Move actionbar items to individual functions
Remove Cancel button from Accuracy slider
Catch null error from Series viewer

--- a/SoilFinder/src/main/res/values/strings.xml
+++ b/SoilFinder/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="accuracy_prefix">Accuracy is </string>
     <string name="accuracy_suffix"> meters</string>
 
-    <string name="loading_message">Loading soil profile&#8320;</string>
-    <string name="getting_location">Getting location&#8320;</string>
+    <string name="loading_message">Loading soil profile...</string>
+    <string name="getting_location">Getting location...</string>
     <string name="slider_header">Select Accuracy</string>
     <string name="slider_message">Minimum GPS accuracy in meters</string>
 
