--- a/SoilFinder/src/main/res/values/strings.xml
+++ b/SoilFinder/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="action_about">About</string>
     <string name="accuracy_prefix">Accuracy is\u0020</string>
     <string name="accuracy_suffix">\u0020meters</string>
-    <string name="loading_message">Loading soil profile\u2026</string>
+    <string name="loading_message">Loading soil\u2026</string>
     <string name="getting_location">Getting location\u2026</string>
     <string name="slider_header">Select Accuracy</string>
     <string name="slider_message">Minimum GPS accuracy in meters</string>
@@ -27,7 +27,7 @@
     <string name="too_few_commas">Error: Please enter two coordinates.</string>
     <string name="too_many_commas">Error: Too many commas.</string>
     <string name="invalid_commas">Error: Coordinates can not begin or end with a comma.</string>
-    <string name="coords_message">Input coordinates as comma-separated pair (ex: -123.07,45.083)</string>
+    <string name="coords_message">Input coordinates as comma-separated pair (ex: 45.083,-123.07)</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="invalid_coordinate">Invalid coordinates.</string>
